Mirror+Bevel modifiers produce incorrect result. #37916

Closed
opened 2013-12-22 14:28:17 +01:00 by Greg Zaal · 16 comments
Member

System Information
Windows 7 64 bit, 2x gtx 570

Blender Version
Broken: Blender 2.69, built 2013-12-18 18:35, hash 4b206af
Worked: Blender 2.69 r61228

Short description of error
When using a mirror modifer above a bevel modifier, the bevels on the mirrored side of the mesh are incorrect: http://i.imgur.com/lUdZMfj.jpg
When viewing vertex normals, you can see the mirrored verts have strange normals which is probably the cause of it: http:*i.imgur.com/3RGGzIx.png (though in older builds that work, the vert normals show strangely as well but the bevel works fine: http:*i.imgur.com/zCiwvXd.png)

Exact steps for others to reproduce the error

  1. Add an edge loop vertically on the default cube
  2. Delete the four verts on one side
  3. Add a mirror modifier and set the axis appropriately
  4. Add a bevel modifier.

This is probably due to recent changes to the bevel modifier ([rev1 ]], http:*developer.blender.org/rB1158c1f7c0ec3f5d31989cb85207a08888d2c0d3 , http:*developer.blender.org/rB7a899ce9fc7fbcea219c12afe49c08114505b3aa , http:*developer.blender.org/rB9a78cda32111be9e1c9e2b9c158b27334d3c8804 , http:*developer.blender.org/rB39673718864f018307e49fac62696341b3230628 , http:*developer.blender.org/rBbfb9cefccbf8ff9733e9739e9c4dbc93a762bebe ), but could also be because of changes to the mirror modifier ([ http://developer.blender.org/rB7214001cdb142cb2556135b1f6e35290c62b9a69 | rev ). Or both.

**System Information** Windows 7 64 bit, 2x gtx 570 **Blender Version** Broken: Blender 2.69, built 2013-12-18 18:35, hash 4b206af Worked: Blender 2.69 r61228 **Short description of error** When using a mirror modifer above a bevel modifier, the bevels on the mirrored side of the mesh are incorrect: http://i.imgur.com/lUdZMfj.jpg When viewing vertex normals, you can see the mirrored verts have strange normals which is probably the cause of it: http:*i.imgur.com/3RGGzIx.png (though in older builds that work, the vert normals show strangely as well but the bevel works fine: http:*i.imgur.com/zCiwvXd.png) **Exact steps for others to reproduce the error** 1. Add an edge loop vertically on the default cube 2. Delete the four verts on one side 3. Add a mirror modifier and set the axis appropriately 4. Add a bevel modifier. This is probably due to recent changes to the bevel modifier ([rev1 ]], [[ http:*developer.blender.org/rB1158c1f7c0ec3f5d31989cb85207a08888d2c0d3 | rev2 ]], [[ http:*developer.blender.org/rB7a899ce9fc7fbcea219c12afe49c08114505b3aa | rev3 ]], [[ http:*developer.blender.org/rB9a78cda32111be9e1c9e2b9c158b27334d3c8804 | rev4 ]], [[ http:*developer.blender.org/rB39673718864f018307e49fac62696341b3230628 | rev5 ]], [[ http:*developer.blender.org/rBbfb9cefccbf8ff9733e9739e9c4dbc93a762bebe | rev6 ]]), but could also be because of changes to the mirror modifier ([[ http://developer.blender.org/rB7214001cdb142cb2556135b1f6e35290c62b9a69 | rev ](http:*developer.blender.org/rBda91575206cda63966fbd526378de98a866e8e5c)). Or both.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal

#38508 was marked as duplicate of this issue

#38508 was marked as duplicate of this issue

#38534 was marked as duplicate of this issue

#38534 was marked as duplicate of this issue
Campbell Barton self-assigned this 2013-12-28 14:13:16 +01:00

Added subscriber: @erwin94

Added subscriber: @erwin94

This is reproducible with a couple of constructive modifiers, it seems like a bevel problem.
(Note that the problem disappears in all cases if the first modifier is applied)

This is reproducible with a couple of constructive modifiers, it seems like a bevel problem. (Note that the problem disappears in all cases if the first modifier is applied)

Added subscribers: @b_d, @ideasman42

Added subscribers: @b_d, @ideasman42

◀ Merged tasks: #38508.

◀ Merged tasks: #38508.

Added subscribers: @KenanBolukbasi, @howardt

Added subscribers: @KenanBolukbasi, @howardt

◀ Merged tasks: #38534.

◀ Merged tasks: #38534.
Member

The problem is that bevel depends on both vertex and face normals, and the BMesh obtained from the DerivedMesh does not get mirrored vertex normals for mirrored vertices.
I'll have a look to see if I can figure out where that could/should be fixed.

The problem is that bevel depends on both vertex and face normals, and the BMesh obtained from the DerivedMesh does not get mirrored vertex normals for mirrored vertices. I'll have a look to see if I can figure out where that could/should be fixed.

Added subscriber: @brecht

Added subscriber: @brecht

Perhaps it's just a matter of setting dependsOnNormals in the ModifierTypeInfo like e.g. the solidify modifier does.

Perhaps it's just a matter of setting dependsOnNormals in the ModifierTypeInfo like e.g. the solidify modifier does.
Member

Thanks brecht, I wasn't aware of that modifier property. That works, and I will commit a change to fix this in a moment.

I'm a little unclear why the mechanism for asking for vertex normals to be recalculated appears to be different from the mechanism to get face normals recalculated (the latter can be gotten by passing 'true' as the second argument to DM_to_bmesh. I was toying with adding a third argument to DM_to_bmesh to ask for vertex recalculation, but since the changing the modifier info works, I will use that route.

Thanks brecht, I wasn't aware of that modifier property. That works, and I will commit a change to fix this in a moment. I'm a little unclear why the mechanism for asking for vertex normals to be recalculated appears to be different from the mechanism to get face normals recalculated (the latter can be gotten by passing 'true' as the second argument to DM_to_bmesh. I was toying with adding a third argument to DM_to_bmesh to ask for vertex recalculation, but since the changing the modifier info works, I will use that route.
Member

Fixed with commit b4fb1e6d9f

Fixed with commit b4fb1e6d9f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37916
No description provided.