source/blender/modifiers/intern/MOD_bevel.c
@@ -183,6 +183,11 @@ static DerivedMesh *applyModifier(ModifierData *md, struct Object *ob,
 	return result;
 }
 
+static bool dependsOnNormals(ModifierData *UNUSED(md))
+{
+	return true;
+}
+
 ModifierTypeInfo modifierType_Bevel = {
 	/* name */              "Bevel",
 	/* structName */        "BevelModifierData",
@@ -205,7 +210,7 @@ ModifierTypeInfo modifierType_Bevel = {
 	/* isDisabled */        NULL,
 	/* updateDepgraph */    NULL,
 	/* dependsOnTime */     NULL,
-	/* dependsOnNormals */  NULL,
+	/* dependsOnNormals */  dependsOnNormals,
 	/* foreachObjectLink */ NULL,
 	/* foreachIDLink */     NULL,
 	/* foreachTexLink */    NULL,
